--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ version = "0.1.0"
 clap = {version = "3.2.8", features = ["derive"]}
 color-eyre = "0.6.1"
 config = "0.13.1"
+ctrlc = { version = "3.2.2", features = ["termination"] }
 dotenv = "0.15.0"
 matrix-sdk = {git = "https://github.com/matrix-org/matrix-rust-sdk.git", rev = "47cfac7f4c35b395b5ccd4cf7b6cdb7f12e7562a", features = ["eyre", "markdown"]}
 serde = {version = "1.0.138", features = ["derive"]}
