--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ color-eyre = "0.6.1"
 config = "0.13.1"
 ctrlc = {version = "3.2.2", features = ["termination"]}
 dotenv = "0.15.0"
-matrix-sdk = {git = "https://github.com/matrix-org/matrix-rust-sdk.git", rev = "b3f3d0a95e6cf480808179559f6682d1c2ebb1c2", features = ["eyre", "markdown", "e2e-encryption", "sled"]}
+matrix-sdk = {version = "0.6.0", features = ["eyre", "markdown", "e2e-encryption", "sled"]}
 serde = {version = "1.0.138", features = ["derive"]}
 serde_json = "1.0.85"
 time = {version = "0.3.11", features = ["parsing"]}
