--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,15 @@ ctrlc = {version = "3.2.2", features = ["termination"]}
 dotenvy = "0.15.5"
 feed-rs = "1.2.0"
 matrix-sdk = {version = "0.6.0", features = ["eyre", "markdown", "e2e-encryption", "sled"]}
-reqwest = "0.11.12"
+reqwest = {version = "0.11.12", features = ["json"]}
 serde = {version = "1.0.138", features = ["derive"]}
 serde_json = "1.0.85"
-time = {version = "0.3.11", features = ["parsing", "serde"]}
+time = {version = "0.3.11", features = ["parsing", "serde", "formatting", "serde-well-known"]}
 tokio = {version = "1.19.2", features = ["full"]}
 tracing = "0.1.36"
 tracing-futures = "0.2.5"
 tracing-subscriber = {version = "0.3.14", features = ["env-filter"]}
 url = { version = "2.3.1", features = ["serde"] }
+
+[package.metadata.cargo-udeps.ignore]
+normal = ["tracing-futures"]
